package application;

/**
 * Thin entry point that delegates startup to the JavaFX application class.
 */
public class Launcher {
    public static void main(String[] args) {
        Main.main(args);
    }
}
