package logic.interfaces;

// Represents an entity that can take damage
public interface Damageable {
    void takeDamage(int amount);
}
