package logic.interfaces;

// Represents an entity that can be upgraded
public interface Upgradable {
    void upgrade();
}
