@startuml
interface logic.Damageable {
~ void takeDamage(int)
}

class logic.BombTower {
- {static} int DEFAULT_DAMAGE
- {static} double DEFAULT_RANGE
- {static} int DEFAULT_COOLDOWN
- {static} double DEFAULT_SPLASH_RADIUS
- double splashRadius
+ <<Create>> BombTower(double,double)
+ <<Create>> BombTower(int,double,int,double,double,double)
+ double getSplashRadius()
+ void setSplashRadius(double)
+ void attack(List<Enemy>)
- {static} double distance(double,double,double,double)
}


class logic.TankEnemy {
- {static} int DEFAULT_HEALTH
- {static} double DEFAULT_SPEED
+ <<Create>> TankEnemy(double,double)
+ <<Create>> TankEnemy(int,double,double,double)
+ void move()
}


interface logic.Upgradable {
~ void upgrade()
}

class logic.SniperTower {
- {static} int DEFAULT_DAMAGE
- {static} double DEFAULT_RANGE
- {static} int DEFAULT_COOLDOWN
+ <<Create>> SniperTower(double,double)
+ <<Create>> SniperTower(int,double,int,double,double)
+ void attack(List<Enemy>)
- double distanceTo(Enemy)
}


class logic.BossEnemy {
- {static} int DEFAULT_HEALTH
- {static} double DEFAULT_SPEED
- {static} int CHILD_COUNT
+ <<Create>> BossEnemy(double,double)
+ <<Create>> BossEnemy(int,double,double,double)
+ void move()
+ List<Enemy> spawnChildrenOnDeath()
}


class application.Main {
+ void start(Stage)
+ {static} void main(String[])
}

class logic.BasicEnemy {
- {static} int DEFAULT_HEALTH
- {static} double DEFAULT_SPEED
+ <<Create>> BasicEnemy(double,double)
+ <<Create>> BasicEnemy(int,double,double,double)
+ void move()
}


class logic.MageTower {
- {static} int DEFAULT_DAMAGE
- {static} double DEFAULT_RANGE
- {static} int DEFAULT_COOLDOWN
- {static} int DEFAULT_ACTIVE_SKILL_DAMAGE
- int activeSkillDamage
+ <<Create>> MageTower(double,double)
+ <<Create>> MageTower(int,double,int,int,double,double)
+ int getActiveSkillDamage()
+ void setActiveSkillDamage(int)
+ void attack(List<Enemy>)
+ void useActiveSkill(List<Enemy>)
- double distanceTo(Enemy)
}


interface logic.Skillable {
~ void useActiveSkill(List<Enemy>)
}

class logic.GameManager {
- {static} int DEFAULT_PLAYER_MONEY
- {static} int DEFAULT_BASE_HEALTH
- {static} double DEFAULT_MAP_END_X
- {static} int DEFAULT_KILL_REWARD
- List<Enemy> activeEnemies
- List<Tower> activeTowers
- int playerMoney
- int baseHealth
- double MAP_END_X
- int killReward
+ <<Create>> GameManager()
+ <<Create>> GameManager(int,int,double)
+ <<Create>> GameManager(int,int,double,int)
+ void spawnEnemy(Enemy)
+ void placeTower(Tower,int)
+ void update()
+ List<Enemy> getActiveEnemies()
+ List<Tower> getActiveTowers()
+ int getPlayerMoney()
+ int getBaseHealth()
+ double getMapEndX()
+ boolean isGameOver()
- {static} void requireNonNegative(int,String)
- {static} void requirePositive(double,String)
}


abstract class logic.Enemy {
# int health
# double baseSpeed
# double x
# double y
# <<Create>> Enemy(int,double,double,double)
+ int getHealth()
+ void setHealth(int)
+ double getBaseSpeed()
+ void setBaseSpeed(double)
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ boolean isAlive()
+ void takeDamage(int)
+ {abstract}void move()
- {static} void requireNonNegative(int,String)
- {static} void requireNonNegative(double,String)
}


class application.Launcher {
+ {static} void main(String[])
}

abstract class logic.Tower {
# int damage
# double range
# int attackCooldown
# double x
# double y
# <<Create>> Tower(int,double,int,double,double)
+ int getDamage()
+ void setDamage(int)
+ double getRange()
+ void setRange(double)
+ int getAttackCooldown()
+ void setAttackCooldown(int)
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ void upgrade()
+ {abstract}void attack(List<Enemy>)
- {static} void requireNonNegative(int,String)
- {static} void requireNonNegative(double,String)
}




logic.Tower <|-- logic.BombTower
logic.Enemy <|-- logic.TankEnemy
logic.Tower <|-- logic.SniperTower
logic.Enemy <|-- logic.BossEnemy
javafx.application.Application <|-- application.Main
logic.Enemy <|-- logic.BasicEnemy
logic.Skillable <|.. logic.MageTower
logic.Tower <|-- logic.MageTower
logic.Damageable <|.. logic.Enemy
logic.Upgradable <|.. logic.Tower
@enduml